--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="➤ Весь спектр похоронных услуг: захоронение, кремация, оформление места захоронения, копка могилы, услуги санитара-патологоанатома, подготовка тела к погребению.">
+    <meta name="theme-color" content="#ba9f5a">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
     <link rel="stylesheet" href="css/style.css">
-    <title>Главная</title>
+    <title>Ритуальные услуги в Минске - бюро похоронных услуг</title>
 </head>
 <body>
     <div class="wrapper">
@@ -13,7 +15,7 @@
         <header class="header">
             <div class="header__up">
                 <div class="header__logo">
-                    <img class="header__logo-img" src="img/home/logo-new.png" alt="логотип сайта похороны в минске">
+                    <img class="header__logo-img" src="img/home/logo-new.png" alt="логотип сайта похороны в минске" width="100" height="100">
                 </div>
                 <h1 class="header__title"><span>Ритуальные услуги в Минске</span></h1>
                 <a href="tel:+375447695139" class="header__tel">тел.+375 44 769 51 39</a>
@@ -123,13 +125,13 @@
                             <source srcset="img/home/k1-350.webp" type="image/webp" media="(max-width: 750px)">
                             <source srcset="img/home/k1-350.jpg" type="image/jpeg" media="(max-width: 750px)">
                             <source srcset="img/home/k1.webp" type="image/webp">
-                            <img src="img/home/k1.jpg" alt="my_alt">
+                            <img loading="lazy" src="img/home/k1.jpg" alt="my_alt">
                             </picture>
                         </div>
                         <div class="cart__line"></div>
                         <div class="cart__title">ЧТО ДЕЛАТЬ КОГДА УМЕР БЛИЗКИЙ ?</div>
                         <div class="cart__sub-title">Когда кто-то умирает, есть ряд вешей которые нужно сделать в первую очередь.</div>
-                        <div class="cart__botton">подробнее</div>
+                        <a class="cart__botton" href="if-died.html">подробнее</a>
                     </div>
                 </div>
                 <div class="multi__item">
@@ -140,13 +142,13 @@
                             <source srcset="img/home/k2-350.webp" type="image/webp" media="(max-width: 750px)">
                             <source srcset="img/home/k2-350.jpg" type="image/jpeg" media="(max-width: 750px)">
                             <source srcset="img/home/k2.webp" type="image/webp">
-                            <img src="img/home/k2.jpg" alt="my_alt">
+                            <img loading="lazy" src="img/home/k2.jpg" alt="my_alt">
                             </picture>
                         </div>
                         <div class="cart__line"></div>
                         <div class="cart__title">МАГАЗИН</div>
                         <div class="cart__sub-title">Каталог всего необходимого для погребения и кремации.</div>
-                        <div class="cart__botton">подробнее</div>
+                        <a class="cart__botton" href="shop-coffins.html">подробнее</a>
                     </div>
                 </div>
                 <div class="multi__item">
@@ -157,13 +159,13 @@
                             <source srcset="img/home/k3-350.webp" type="image/webp" media="(max-width: 750px)">
                             <source srcset="img/home/k3-350.jpg" type="image/jpeg" media="(max-width: 750px)">
                             <source srcset="img/home/k3.webp" type="image/webp">
-                            <img src="img/home/k3.jpg" alt="my_alt">
+                            <img loading="lazy" src="img/home/k3.jpg" alt="my_alt">
                             </picture>
                         </div>
                         <div class="cart__line"></div>
                         <div class="cart__title">КОНТАКТЫ РИТУАЛЬНЫХ АГЕНТОВ</div>
                         <div class="cart__sub-title">Телефонные номера и иные способы связи, для незамедлительной помощи в тяжёлый момент.</div>
-                        <div class="cart__botton">подробнее</div>
+                        <a class="cart__botton" href="contacts.html">подробнее</a>
                     </div>
                 </div>
             </div>
@@ -177,7 +179,7 @@
                 <source srcset="img/home/r-1-500.webp" type="image/webp" media="(max-width: 750px)">
                 <source srcset="img/home/r-1-500.jpg" type="image/jpeg" media="(max-width: 750px)">
                 <source srcset="img/home/r-1.webp" type="image/webp">
-                <img src="img/home/r-1.jpg" alt="my_alt">
+                <img loading="lazy" src="img/home/r-1.jpg" alt="my_alt">
                 </picture>
             </div> 
             <!-- соболезнуем-3 -->
@@ -193,7 +195,7 @@
                             <source srcset="img/home/item-1-400.webp" type="image/webp" media="(max-width: 750px)">
                             <source srcset="img/home/item-1-400.jpg" type="image/jpeg" media="(max-width: 750px)">
                             <source srcset="img/home/item-1.webp" type="image/webp">
-                            <img src="img/home/item-1.jpg" alt="my_alt">
+                            <img loading="lazy" src="img/home/item-1.jpg" alt="my_alt">
                         </picture>
                     </div>
                         <div class="age-17__title-1" id="age" data-time="2000" data-start="0" data-end="17">17+</div>
@@ -206,7 +208,7 @@
                             <source srcset="img/home/item-2-400.webp" type="image/webp" media="(max-width: 750px)">
                             <source srcset="img/home/item-2-400.jpg" type="image/jpeg" media="(max-width: 750px)">
                             <source srcset="img/home/item-2.webp" type="image/webp">
-                            <img src="img/home/item-2.jpg" alt="my_alt">
+                            <img loading="lazy" src="img/home/item-2.jpg" alt="my_alt">
                         </picture>
                     </div>
                 </div>
@@ -238,7 +240,7 @@
                                     <source srcset="img/home/item-3-350.webp" type="image/webp" media="(max-width: 750px)">
                                     <source srcset="img/home/item-3-350.jpg" type="image/jpeg" media="(max-width: 750px)">
                                     <source srcset="img/home/item-3.webp" type="image/webp">
-                                    <img src="img/home/item-3.jpg" alt="my_alt">
+                                    <img loading="lazy" src="img/home/item-3.jpg" alt="my_alt">
                                 </picture>
                             </div>
                         </div>
@@ -331,19 +333,15 @@
             </div>
             </div> 
 
-
-
     
         </main>
-
-
 
         <!--= footer -->
         <footer class="footer">
             <div class="footer__item-img">
                 <picture>
                     <source srcset="img/footer/Logo-1.webp" type="image/webp">
-                    <img class="footer__img" src="img/footer/Logo-1.jpg" alt="логотип похороны в минске">
+                    <img loading="lazy" class="footer__img" src="img/footer/Logo-1.jpg"  alt="логотип похороны в минске" width="298" height="100">
                 </picture>
             </div>
             <div class="footer__item">
@@ -353,8 +351,8 @@
             </div>
             <div class="footer__item">
                 <div class="footer__title">телефоны</div>
-                <div class="footer__text">+375447695139</div>
-                <div class="footer__text">+375295513041</div>
+                <a class="footer__text" href="tel:+375447695139">+375447695139</a>
+                <a class="footer__text" href="tel:+375295513041">+375295513041</a>
             </div>
             <div class="footer__item">
                 <div class="footer__title">часы работы</div>
