--- a/ritual-agent.html
+++ b/ritual-agent.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="➤ Наш ритуальный агент оперативно проконсультирует и поможет в организации полного процесса похорон вашего близкого человека на должном уровне.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
     <link rel="stylesheet" href="css/style.css">
-    <title>Ритуальный агент</title>
+    <title>Ритуальный агент в Минске - цена услуг похоронного агента</title>
 </head>
 <body>
     <div class="wrapper">
@@ -101,7 +102,6 @@
 
         <!--= main -->
         <main class="main">
-
 
 <!-- шапка -->
         <div class="heder-page heder-page_margin">
@@ -250,7 +250,7 @@
             <div class="footer__item-img">
                 <picture>
                     <source srcset="img/footer/Logo-1.webp" type="image/webp">
-                    <img class="footer__img" src="img/footer/Logo-1.jpg" alt="логотип похороны в минске">
+                    <img loading="lazy" class="footer__img" src="img/footer/Logo-1.jpg"  alt="логотип похороны в минске" width="298" height="100">
                 </picture>
             </div>
             <div class="footer__item">
@@ -260,8 +260,8 @@
             </div>
             <div class="footer__item">
                 <div class="footer__title">телефоны</div>
-                <div class="footer__text">+375447695139</div>
-                <div class="footer__text">+375295513041</div>
+                <a class="footer__text" href="tel:+375447695139">+375447695139</a>
+                <a class="footer__text" href="tel:+375295513041">+375295513041</a>
             </div>
             <div class="footer__item">
                 <div class="footer__title">часы работы</div>
