--- a/shop-coffins.html
+++ b/shop-coffins.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="➤ Гроб у нас можно купить обитый тканью, полированный, разных размеров и формы. Цена на всю продукцию невысокая. 🚚 Доставка по Минску.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
     <link rel="stylesheet" href="css/style.css">
-    <title>Гробы</title>
+    <title>Гроб купить в Минске - где купить по недорогой цене гроб для похорон</title>
 </head>
 <body>
     <div class="wrapper">
@@ -317,21 +318,14 @@
             <div class="text-page container">
                 <div class="text-page_margin">У нас всегда в наличии большой выбор гробов по доступной стоимости. Все наши изделия имеют высокое качество и отличный внешний вид. Подобрать его можно как для женщины, так и для мужчины. Чтобы сделать заказ, не обязательно куда-то ехать. Вы можете позвонить нам и получить бесплатную консультацию. Наши специалисты помогут сделать выбор, подберут необходимые товары и атрибуты для красивого захоронения усопшего. Гробы у нас купить можно обитые тканью, полированные, разных размеров и форм. Цена на всю продукцию невысокая. Мы понимаем и без того всю сложность ситуации, поэтому максимально стараемся снизить затраты на погребение, оказываем услуги по захоронению в счет пособия или с отсрочкой платежа. Похороны — сложный этап в жизни каждого. Наша миссия сделать его, несмотря на всю трагичность ситуации, красивым и искренним. Обращаясь к нам, вы можете надеяться на понимание и помощь в решении любых вопросов, касающихся захоронения.</div>
             </div>
-
-
-<!-- конец блок магазина -->
-    
-
-
-        </div>
-
+            <!-- конец блок магазина -->
         </main>
         <!--= footer -->
         <footer class="footer">
             <div class="footer__item-img">
                 <picture>
                     <source srcset="img/footer/Logo-1.webp" type="image/webp">
-                    <img class="footer__img" src="img/footer/Logo-1.jpg" alt="логотип похороны в минске">
+                    <img loading="lazy" class="footer__img" src="img/footer/Logo-1.jpg"  alt="логотип похороны в минске" width="298" height="100">
                 </picture>
             </div>
             <div class="footer__item">
@@ -341,8 +335,8 @@
             </div>
             <div class="footer__item">
                 <div class="footer__title">телефоны</div>
-                <div class="footer__text">+375447695139</div>
-                <div class="footer__text">+375295513041</div>
+                <a class="footer__text" href="tel:+375447695139">+375447695139</a>
+                <a class="footer__text" href="tel:+375295513041">+375295513041</a>
             </div>
             <div class="footer__item">
                 <div class="footer__title">часы работы</div>
