--- a/cemetery-minsk.html
+++ b/cemetery-minsk.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="На территории Минска и Минской области находится около 20 кладбищ. Какие у них адреса и особенности на нашем сайте.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
     <link rel="stylesheet" href="css/style.css">
-    <title>КЛАДБИЩА МИНСКА</title>
+    <title>Кладбища Минска - действующие места захоронения</title>
 </head>
 <body>
     <div class="wrapper">
@@ -200,7 +201,7 @@
             <div class="footer__item-img">
                 <picture>
                     <source srcset="img/footer/Logo-1.webp" type="image/webp">
-                    <img class="footer__img" src="img/footer/Logo-1.jpg" alt="логотип похороны в минске">
+                    <img loading="lazy" class="footer__img" src="img/footer/Logo-1.jpg"  alt="логотип похороны в минске" width="298" height="100">
                 </picture>
             </div>
             <div class="footer__item">
@@ -210,8 +211,8 @@
             </div>
             <div class="footer__item">
                 <div class="footer__title">телефоны</div>
-                <div class="footer__text">+375447695139</div>
-                <div class="footer__text">+375295513041</div>
+                <a class="footer__text" href="tel:+375447695139">+375447695139</a>
+                <a class="footer__text" href="tel:+375295513041">+375295513041</a>
             </div>
             <div class="footer__item">
                 <div class="footer__title">часы работы</div>
