--- a/information.html
+++ b/information.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Здесь мы собрали всю самую важную и необходимую информацию, которая поможет все сделать правильно при захоронении своего близкого человека.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
     <link rel="stylesheet" href="css/style.css">
-    <title>Важная информация</title>
+    <title>Важная и полезная информация, рекомендации при смерти человека</title>
 </head>
 <body>
     <div class="wrapper">
@@ -176,7 +177,6 @@
                     </div>
                     <div class="info__title">ЧТО ДЕЛАТЬ, ЕСЛИ УМЕР БЛИЗКИЙ ЧЕЛОВЕК</div>
                 </a>
-            </div>
 
         <!-- конец блок магазина -->
         </main>
@@ -186,7 +186,7 @@
             <div class="footer__item-img">
                 <picture>
                     <source srcset="img/footer/Logo-1.webp" type="image/webp">
-                    <img class="footer__img" src="img/footer/Logo-1.jpg" alt="логотип похороны в минске">
+                    <img loading="lazy" class="footer__img" src="img/footer/Logo-1.jpg"  alt="логотип похороны в минске" width="298" height="100">
                 </picture>
             </div>
             <div class="footer__item">
@@ -196,8 +196,8 @@
             </div>
             <div class="footer__item">
                 <div class="footer__title">телефоны</div>
-                <div class="footer__text">+375447695139</div>
-                <div class="footer__text">+375295513041</div>
+                <a class="footer__text" href="tel:+375447695139">+375447695139</a>
+                <a class="footer__text" href="tel:+375295513041">+375295513041</a>
             </div>
             <div class="footer__item">
                 <div class="footer__title">часы работы</div>
