--- a/contacts.html
+++ b/contacts.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Здесь мы собрали контактные данные нашей компании, по которым вы можете связаться с нами. ☎ Звоните за консультацией!">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
     <link rel="stylesheet" href="css/style.css">
     <title>Контакты</title>
@@ -146,12 +147,13 @@
         
 
     </main>
+
     <!--= footer -->
     <footer class="footer">
         <div class="footer__item-img">
             <picture>
                 <source srcset="img/footer/Logo-1.webp" type="image/webp">
-                <img class="footer__img" src="img/footer/Logo-1.jpg" alt="логотип похороны в минске">
+                <img loading="lazy" class="footer__img" src="img/footer/Logo-1.jpg"  alt="логотип похороны в минске" width="298" height="100">
             </picture>
         </div>
         <div class="footer__item">
@@ -161,8 +163,8 @@
         </div>
         <div class="footer__item">
             <div class="footer__title">телефоны</div>
-            <div class="footer__text">+375447695139</div>
-            <div class="footer__text">+375295513041</div>
+            <a class="footer__text" href="tel:+375447695139">+375447695139</a>
+            <a class="footer__text" href="tel:+375295513041">+375295513041</a>
         </div>
         <div class="footer__item">
             <div class="footer__title">часы работы</div>
@@ -176,3 +178,6 @@
 <script src="js/script.js"></script>
 </body>
 </html>
+
+
+
