--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <!--= main -->
         <main class="main">
             <!-- img гроб -->
-            <div class="coffin-img">
+            <div class="coffin-img container_img">
                 <picture>
                 <source srcset="img/home/grob-500.webp" type="image/webp" media="(max-width: 750px)">
                 <source srcset="img/home/grob-500.jpg" type="image/jpeg" media="(max-width: 750px)">
@@ -174,7 +174,7 @@
                 <span class="box-text-2__span-2"></span>
             </div>
             <!-- img рука -->
-            <div class="coffin-img">
+            <div class="coffin-img container_img">
                 <picture>
                 <source srcset="img/home/r-1-500.webp" type="image/webp" media="(max-width: 750px)">
                 <source srcset="img/home/r-1-500.jpg" type="image/jpeg" media="(max-width: 750px)">
