--- a/cargo-200.html
+++ b/cargo-200.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="➤ Если ваш близкий родственник или близкий человек скончался в другой стране и требуется доставить тело на родину - наша компания поможет с перевозкой тела.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-1.css">
     <title>Перевозка умерших груз 200 - услуги репатриации в Минске</title>
 </head>
 <body>
