--- a/cremation.html
+++ b/cremation.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="➤ Организуем кремацию вашего умершего близкого по доступным ценам в Минске. Звоните! - проконсультируем и поможем с крематорием.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-1.css">
     <title>Кремация в Минске - цена кремации человека сколько стоит</title>
 </head>
 <body>
