--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="➤ Весь спектр похоронных услуг: захоронение, кремация, оформление места захоронения, копка могилы, услуги санитара-патологоанатома, подготовка тела к погребению.">
     <meta name="theme-color" content="#ba9f5a">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-1.css">
     <title>Ритуальные услуги в Минске - бюро похоронных услуг</title>
 </head>
 <body>
@@ -112,8 +112,8 @@
                 </picture>
             </div>
             <!-- соболезнуем-1 -->
-            <div class="box-text">
-                <span class="box-text__span"></span>
+            <div class="box-text box_margin">
+                <span class="box-text__span span_margin">Искренне соболезнуем Вам, если Вас коснулось горе. Предлагаем и оказываем Все виды ритуальных услуг на протяжении более, чем 17 лет.</span>
             </div>
             <!-- три колонки -->
             <div class="multi">
@@ -170,8 +170,8 @@
                 </div>
             </div>
             <!-- соболезнуем-2 -->
-            <div class="box-text-2">
-                <span class="box-text-2__span-2"></span>
+            <div class="box-text  box_margin-2">
+                <span class="box-text__span  span_margin-2">Кроме финансовой составляющей, нами безусловно движет то, что люди благодарят нас за оказанные услуги и рекомендуют нас знакомым…</span>
             </div>
             <!-- img рука -->
             <div class="coffin-img container_img">
@@ -183,8 +183,8 @@
                 </picture>
             </div> 
             <!-- соболезнуем-3 -->
-            <div class="box-text-3">
-                <span class="box-text-3__span-3"></span>
+            <div class="box-text box_margin">
+                <span class="box-text__span span_margin">Если у Вас, есть какие-либо вопросы относительно наших услуг, пожалуйста, свяжитесь с нами.</span>
             </div>
             <!-- мулти блок -->
             <div class="age-17" id="age17">
