--- a/production-of-monuments.html
+++ b/production-of-monuments.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="➤ Поможем в выборе и заказе памятника по приемлемой цене. Ответственный подход к выполнению заказа и оперативная доставка!">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-1.css">
     <title>Заказать памятник на могилу в Минске под заказ</title>
 </head>
 <body>
