--- a/rent-catatal.html
+++ b/rent-catatal.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="➤ Заказать машину на похороны у нас можно в любое время суток. ✅ Мы работаем без выходных и круглосуточно.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-1.css">
     <title>Аренда катафалка в Минске - услуги катафалка заказать</title>
 </head>
 <body>
