--- a/shop-wreaths.html
+++ b/shop-wreaths.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="У нас представлен большой ассортимент венков для похорон. Возможно купить вариант с ленточкой, надписью или без. 🚚 Доставка по всему Минску!">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-1.css">
     <title>Венок ритуальный купить в Минске - цена венков для похорон</title>
 </head>
 <body>
