--- a/COLUMBARIA.html
+++ b/COLUMBARIA.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="На территории Минска и Минской области находится больше 6 колумбариев. Как купить место в колумбарии и сколько стоит место.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-1.css">
     <title>Колумбарии Минска - колумбарные стены для захоронения праха</title>
 </head>
 <body>
