--- a/morgues-in-minsk.html
+++ b/morgues-in-minsk.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="☑️ По какому адресу находятся морги в Минске, какой у них график работы и телефоны. Проконсультироваться по захоронения можно у нас.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-1.css">
     <title>Морги в Минске телефоны, адреса, время работы</title>
 </head>
 <body>
