--- a/shop-baskets.html
+++ b/shop-baskets.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-1.css">
     <title>Корзины ритуальные</title>
 </head>
 <body>
