--- a/burial.html
+++ b/burial.html
@@ -131,8 +131,8 @@
         <div class="text-page container">
             <div class="text-page_margin">Перед захоронением оформляются все необходимые документы, приобретаются ритуальная символика, место на кладбище, организовываются поминки. Все эти процедуры отнимают немало времени и сил. Именно поэтому стоит обратиться в компанию, которая оказывает ритуальные услуги. Сколько стоят ритуальные услуги? Какая сумма необходима на погребение? Достаточно ли похоронных, выделенных государством?<br><br>Наша компания оказывает ритуальные услуги под ключ так, чтобы пособие покрывало стоимость похорон. Теперь не нужно думать о том, где взять денег, как вложиться в бюджет. Все это делаем мы за вас.<br><br>Сегодня выплата похоронных в Минске составляет  1476,3 руб . Мы предлагаем своим клиентам 3 пакета услуг разной стоимости.<br><br>В них входят следующее:</div>
         </div>
-         <!-- Prais -->
-         <div class="box-prais">
+        <!-- Prais -->
+        <div class="box-prais">
             <div class="prais">
                 <div class="prais__item">
 
@@ -142,7 +142,7 @@
                             <div class="prais-list__sub-title">МИНИМАЛЬНЫЙ ПАКЕТ НЕОБХОДИМЫХ УСЛУГ</div>
                         </div>
                         <div class="prais-list__pay">
-                            <div class="prais-list__byn">690<span>BYN</span></div>
+                            <div class="prais-list__byn">690<span> BYN</span></div>
                             <div class="prais-list__byn-sub">полностью покрывает пособие на погребение</div>
                         </div>
                         <ul class="prais-list__list">
@@ -156,18 +156,18 @@
                             <li class="prais-list__line"><span>Полное сопровождение похорон;</span></li>
                         </ul>
                         <div class="prais-list__button">заказать</div>
-                        <div class="prais-list__ps">Сумма пособия за фувраль 2022, составляет: 1675,3 руб.</div>
+                        <div class="prais-list__ps">Сумма пособия за фeвраль 2022, составляет: 1675,3 руб.</div>
                     </div>
 
                 </div>
                 <div class="prais__item">
                     <div class="prais-list">
                         <div class="prais-list__heder">
-                            <div class="prais-list__title">STANDART</div>
+                            <div class="prais-list__title">CLASSIC PLUS</div>
                             <div class="prais-list__sub-title">ВЕСЬ НЕОБХОДИМЫХ ПЕРЕЧЕНЬ УСЛУГ</div>
                         </div>
                         <div class="prais-list__pay">
-                            <div class="prais-list__byn">950<span>BYN</span></div>
+                            <div class="prais-list__byn">950<span> BYN</span></div>
                             <div class="prais-list__byn-sub">полностью покрывает пособие на погребение</div>
                         </div>
                         <ul class="prais-list__list">
@@ -182,17 +182,17 @@
                             <li class="prais-list__line"><span>Полное сопровождение похорон;</span></li>
                         </ul>
                         <div class="prais-list__button">заказать</div>
-                        <div class="prais-list__ps">Сумма пособия за фувраль 2022, составляет: 1675,3 руб.</div>
+                        <div class="prais-list__ps">Сумма пособия за фeвраль 2022, составляет: 1675,3 руб.</div>
                     </div>
                 </div>
                 <div class="prais__item">
                     <div class="prais-list">
                         <div class="prais-list__heder">
-                            <div class="prais-list__title">CLASSIC</div>
+                            <div class="prais-list__title">STANDART</div>
                             <div class="prais-list__sub-title">МИНИМАЛЬНЫЙ ПАКЕТ НЕОБХОДИМЫХ УСЛУГ</div>
                         </div>
                         <div class="prais-list__pay">
-                            <div class="prais-list__byn">1200<span>BYN</span></div>
+                            <div class="prais-list__byn">1200<span> BYN</span></div>
                             <div class="prais-list__byn-sub">полностью покрывает пособие на погребение</div>
                         </div>
                         <ul class="prais-list__list  __padding-3">
@@ -210,7 +210,7 @@
                             <li class="prais-list__line"><span>Полное сопровождение похорон.</span></li>
                         </ul>
                         <div class="prais-list__button">заказать</div>
-                        <div class="prais-list__ps">Сумма пособия за фувраль 2022, составляет: 1675,3 руб.</div>
+                        <div class="prais-list__ps">Сумма пособия за фeвраль 2022, составляет: 1675,3 руб.</div>
                     </div>
                 </div>
             </div>
