--- a/contacts.html
+++ b/contacts.html
@@ -116,7 +116,7 @@
 
         <div class="contacts">
             <div class="contacts__info">
-                <div class="contacts__title">СВЯЖИТЕСЬ С НАМИ, ЧТОБЫ ПОЛУЧИТЬ БОЛЕЕ ТОЧНУЮ ИНФОРМАЦИЮ</div>
+                <div class="contacts__title">СВЯЖИТЕСЬ С НАМИ, ЧТОБЫ ПОЛУЧИТЬ БОЛЕЕ ПОДРОБНУЮ ИНФОРМАЦИЮ</div>
                 <div class="contacts__text">Мы готовы помочь вам в трудную минуту.</div>
                 <!-- <div class="contacts__tel" >+375 (44) 719 05 99</div> -->
                 <a class="contacts__tel" href="tel:+375447190599">+375 (44) 719 05 99</a>
@@ -131,7 +131,6 @@
                     </picture>
                     <div class="contacts__time-work">
                         <div class="contacts__img-title">ЧАСЫ РАБОТЫ</div>
-                        <div class="contacts__img-24">24 ЧАСА</div>
                         <div class="contacts__img-all">КРУГЛОСУТОЧНО</div>
                     </div>
                 </div>
