--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
             <!-- соболезнуем-1 -->
             <div class="box-text box_margin">
-                <span class="box-text__span span_margin">Искренне соболезнуем Вам, если Вас коснулось горе. Предлагаем и оказываем Все виды ритуальных услуг на протяжении более, чем 17 лет.</span>
+                <span class="box-text__span span_margin">Искренне соболезнуем вам, если вас коснулось горе. Предлагаем и оказываем Все виды ритуальных услуг на протяжении более, чем 17 лет.</span>
             </div>
             <!-- три колонки -->
             <div class="multi">
@@ -215,7 +215,7 @@
 
                 <div class="age-17__item-3">
                     <div class="age-17__title-3">Кратко о Нас</div>
-                    <div class="age-17__sub-title-3">МЫ ПРЕДОСТАВЛЯЕМ ЛУЧШИЕ УСЛУГИ ПО ПОХОРОНАМ И КРЕМАЦИИ С 2003 ГОДА.</div>
+                    <div class="age-17__sub-title-3">МЫ ПРЕДОСТАВЛЯЕМ ЛУЧШИЕ УСЛУГИ ПО ПОХОРОНАМ И КРЕМАЦИИ С 2005 ГОДА.</div>
                     <div class="age-17__line"></div>
                     <div class="age-17__text-3">Вы не остаетесь с горем один на один, мы многие годы помогаем людям в трудные минуты их жизни, круглосуточная помошь и консультация по вопросам кремации и захоронения.</div>
                     
@@ -273,14 +273,14 @@
                             <li class="prais-list__line"><span>Полное сопровождение похорон;</span></li>
                         </ul>
                         <div class="prais-list__button">заказать</div>
-                        <div class="prais-list__ps">Сумма пособия за фувраль 2022, составляет: 1675,3 руб.</div>
+                        <div class="prais-list__ps">Сумма пособия за фeвраль 2022, составляет: 1675,3 руб.</div>
                     </div>
 
                 </div>
                 <div class="prais__item">
                     <div class="prais-list">
                         <div class="prais-list__heder">
-                            <div class="prais-list__title">STANDART</div>
+                            <div class="prais-list__title">CLASSIC PLUS</div>
                             <div class="prais-list__sub-title">ВЕСЬ НЕОБХОДИМЫХ ПЕРЕЧЕНЬ УСЛУГ</div>
                         </div>
                         <div class="prais-list__pay">
@@ -299,13 +299,13 @@
                             <li class="prais-list__line"><span>Полное сопровождение похорон;</span></li>
                         </ul>
                         <div class="prais-list__button">заказать</div>
-                        <div class="prais-list__ps">Сумма пособия за фувраль 2022, составляет: 1675,3 руб.</div>
+                        <div class="prais-list__ps">Сумма пособия за фeвраль 2022, составляет: 1675,3 руб.</div>
                     </div>
                 </div>
                 <div class="prais__item">
                     <div class="prais-list">
                         <div class="prais-list__heder">
-                            <div class="prais-list__title">CLASSIC</div>
+                            <div class="prais-list__title">STANDART</div>
                             <div class="prais-list__sub-title">МИНИМАЛЬНЫЙ ПАКЕТ НЕОБХОДИМЫХ УСЛУГ</div>
                         </div>
                         <div class="prais-list__pay">
@@ -327,7 +327,7 @@
                             <li class="prais-list__line"><span>Полное сопровождение похорон.</span></li>
                         </ul>
                         <div class="prais-list__button">заказать</div>
-                        <div class="prais-list__ps">Сумма пособия за фувраль 2022, составляет: 1675,3 руб.</div>
+                        <div class="prais-list__ps">Сумма пособия за фeвраль 2022, составляет: 1675,3 руб.</div>
                     </div>
                 </div>
             </div>
